k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secretdiary-web-svc
  namespace: secretdiary
spec:
  selector:
    app: secretdiary-web
  ports:
    - name: http
      port: 12567
      targetPort: 12567
  type: ClusterIP
