k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secretdiary-web-ingress
  namespace: secretdiary
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: devse.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secretdiary-web-svc
                port:
                  number: 12567
